--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
     },
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "~4.*",
-        "illuminate/console": "~4.*",
-        "illuminate/filesystem": "~4.*",
+        "illuminate/support": "4.*",
+        "illuminate/console": "4.*",
+        "illuminate/filesystem": "4.*",
         "tedivm/jshrink": "0.5.*"
     },
     "require-dev": {
